tests/ui/parser/raw-string-suffix-invalid.stderr
error: suffixes on string literals are invalid
  --> $DIR/raw-string-suffix-invalid.rs:5:13
   |
LL |     let s = r#" \ "#r"\ ";
   |             ^^^^^^^^^^ invalid suffix `r`

error: expected one of `.`, `;`, `?`, `else`, or an operator, found `"\ "`
  --> $DIR/raw-string-suffix-invalid.rs:5:23
   |
LL |     let s = r#" \ "#r"\ ";
   |                       ^^^^^ expected one of `.`, `;`, `?`, `else`, or an operator

error: aborting due to 2 previous errors

